BL_ArmatureConstraint.active returns wrong value #37892

Closed
opened 2013-12-20 10:56:38 +01:00 by Séverin Lemaignan · 10 comments

BL_ArmatureConstraint.active inverts True and False we reading the value.

I thinnk the the issue lays here:

http://developer.blender.org/diffusion/B/browse/master/source/gameengine/Converter/BL_ArmatureConstraint.cpp;d71bcab0762d2dedf961136d831b6b0ad7dbc43c$325

BL_ArmatureConstraint.active inverts True and False we *reading* the value. I thinnk the the issue lays here: http://developer.blender.org/diffusion/B/browse/master/source/gameengine/Converter/BL_ArmatureConstraint.cpp;d71bcab0762d2dedf961136d831b6b0ad7dbc43c$325

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @skadge

Added subscriber: @skadge

Replacing this line by:

return PyBool_FromLong(~constraint->flag & CONSTRAINT_OFF);

solves the issue.

Replacing [this line ](http://developer.blender.org/diffusion/B/browse/master/source/gameengine/Converter/BL_ArmatureConstraint.cpp;d71bcab0762d2dedf961136d831b6b0ad7dbc43c$325) by: ``` return PyBool_FromLong(~constraint->flag & CONSTRAINT_OFF); ``` solves the issue.

Added subscriber: @dfelinto

Added subscriber: @dfelinto

@skadge do you have a test file showing the problem that can be used with your fix?

@skadge do you have a test file showing the problem that can be used with your fix?

pushed the fix (with small change) on dfac6c4

pushed the fix (with small change) on dfac6c4

Added subscriber: @BenoitBolsee

Added subscriber: @BenoitBolsee

(adding Benoit as CC, since the original code is from him, just for the sake of it)

(adding Benoit as CC, since the original code is from him, just for the sake of it)

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Dalai Felinto self-assigned this 2014-01-14 16:24:47 +01:00

closing now, I didn't test the committed patch, but it should be fine.
Thanks for looking at it

closing now, I didn't test the committed patch, but it should be fine. Thanks for looking at it
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37892
No description provided.