fix #T37892 BL_ArmatureConstraint.active returns wrong value

patch (with changes from me) by Séverin Lemaignan (skadge)